--- a/book-server/package.json
+++ b/book-server/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://khaledelgamely.github.io/Book-Store",
   "name": "book-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "json-server -p 3008 -w data.json"
   },
