--- a/book-server/package.json
+++ b/book-server/package.json
@@ -1,15 +1,19 @@
 {
+  "homepage": "https://khaledelgamely.github.io/Book-Store/",
   "name": "book-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server -p 3008 -w data.json"
+    "start": "json-server -p 3008 -w data.json",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "gh-pages": "^4.0.0",
     "json-server": "^0.17.1"
   }
 }
