--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "homepage": "https://khaledelgamely.github.io/Book-Store/",
-  "name": "bookcenter",
-  "version": "0.1.0",
+  "homepage": "https://khaledelgamely.github.io/",
+  "name": "book App",
+  "version": "0.1.0", 
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
