--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://khaledelgamely.github.io/",
+  "homepage": "https://khaledelgamely.github.io/Book-Store/",
   "name": "book App",
   "version": "0.1.0", 
   "private": true,
